Переносит верстку на tsx, добавляет компоненты, логин+регистрация, создает страницу 404

--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-	"name": "skypro-music",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "eslint",
-		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,json,md}\""
-	},
-	"dependencies": {
-		"next": "15.5.0",
-		"react": "19.1.0",
-		"react-dom": "19.1.0"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3",
-		"@next/eslint-plugin-next": "^15.5.0",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"@typescript-eslint/eslint-plugin": "^8.40.0",
-		"@typescript-eslint/parser": "^8.40.0",
-		"eslint": "^9",
-		"eslint-config-next": "15.5.0",
-		"eslint-plugin-prettier": "^5.5.4",
-		"typescript": "^5"
-	}
+  "name": "skypro-music",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start",
+    "lint": "eslint"
+  },
+  "dependencies": {
+    "next": "15.5.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.5.0",
+    "@types/classnames": "^2.3.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "sass": "^1.90.0",
+    "typescript": "^5"
+  }
 }
